removed couple of themes and added reference to others

--- a/src/themes/minimalism.css
+++ b/src/themes/minimalism.css
@@ -1,3 +1,5 @@
+/*this css file is downloaded from https://userstyles.org/styles/109588/custom-bg-minimalism */
+
 .app-wrapper
 {
 	background-color:#4B4B4C;
