--- a/src/themes/darkSimple.css
+++ b/src/themes/darkSimple.css
@@ -1,3 +1,4 @@
+/*this css file is downloaded from https://userstyles.org/styles/109562/best-dark-whatsapp-web-custom-backgrounds */
 
 #window{background:rgb(121,121,121)!important;}
 ::-webkit-scrollbar-track{background:rgba(255,255,255,0.26)!important;}
